--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
+    "jquery": "^3.6.0",
     "sass": "^1.54.0",
     "typescript": "^4.7.4"
   }
