--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
     "sass": "^1.54.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4"
   }
 }
