--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.10",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
@@ -32,6 +33,7 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.6.0",
+    "mixitup": "^3.3.1",
     "sass": "^1.54.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4"
